syntax = "proto3";

package live_cord;

service HelloWorld {
  rpc hello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}